// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherDropdown.vue should pass through cover property 1`] = `
<div
  class="feather-menu feather-dropdown-container"
>
  
  
  <button
    menu-trigger=""
  >
    TEST
  </button>
  
  
  <div
    class="feather-menu-dropdown bottom-left covered"
    id="feather-menu-dropdown"
    style="display: none;"
  >
    
    <ul
      aria-labelledby="feather-menu-trigger"
      class="feather-dropdown"
    >
      
      <li>
        <a>
          TEST
        </a>
      </li>
      <li>
        <a>
          TEST
        </a>
      </li>
      
    </ul>
    
  </div>
</div>
`;

exports[`FeatherDropdown.vue should pass through right property 1`] = `
<div
  class="feather-menu feather-dropdown-container"
>
  
  
  <button
    menu-trigger=""
  >
    TEST
  </button>
  
  
  <div
    class="feather-menu-dropdown bottom-right"
    id="feather-menu-dropdown"
    style="display: none;"
  >
    
    <ul
      aria-labelledby="feather-menu-trigger"
      class="feather-dropdown"
    >
      
      <li>
        <a>
          TEST
        </a>
      </li>
      <li>
        <a>
          TEST
        </a>
      </li>
      
    </ul>
    
  </div>
</div>
`;
